--- a/public/themes/simpleboot3/portal/partner.html
+++ b/public/themes/simpleboot3/portal/partner.html
@@ -1,212 +1,229 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <include file="public@head"/>
+    <include file="public@head" />
 </head>
+
 <body>
-	<div class="partner">
-		<div class="index-banner index-banner-top">
-			<div class="index-banner-box hidden-xs">
-				<div class="title-top inner">
-					<div class="line"></div>
-					<div class="text">零投入</div>
-					<div class="line"></div>
-					<div class="text">全托管</div>
-					<div class="line"></div>
-					<div class="text">稳收益</div>
-					<div class="line"></div>
-					<div class="text">可持续</div>
-					<div class="line"></div>
-				</div>
-				<div class="title-bottom inner">用人脉，年入百万</div>
-			</div>
-			<div class="index-banner-box visible-xs">
-				<div class="title">用人脉，年入百万</div>
-			</div>
-		</div>
-		<div class="partner-plan-outbox">
-			<div class="partner-plan">
-				<div class="inner">
-					<div class="inner-bigger-title text-center">
-						<p>合伙人计划</p>
-					</div>
-					<div class="inner-small-title text-center">成功的道路并不曲折</div>
-				</div>
-				<div class="partner-plan-box">
-					<div class="inner">
-						<div class="flex-box">
-							<div class="partner-plan-box-left">
-								<div class="title">零投入  |  全托管  |  稳收益  |  可持续</div>
-								<div class="text">合伙人模式：“0成本式”城市合伙人，合伙人无需支付任何费用，收入以“高佣金”的形式。</div>
-								<div class="text">合伙人只需要提供人脉资源，华劳集团负责项目洽谈和最终达成，最终合伙人稳拿收益。</div>
-								<div class="bottom-box">
-									<div class="name">怎么可以成为合伙人？</div>
-									<div class="title">有人脉</div>
-									<div class="text">有“规模以上企业、劳动密集型企业”人脉资源，能够对接到企业人力资源部长、分管副总、高管或老板。</div>
-									<div class="title">有干劲</div>
-									<div class="text">积极主动、争取资源、有想要成就自我的想法。</div>
-								</div>
-							</div>
-							<div class="partner-plan-box-right">
-								<div class="title">团队协助，精准支持</div>
-								<ul class="list">
-									<li><div></div>专业销售团队支持</li>
-									<li><div></div>市场活动宣传支持</li>
-									<li><div></div>专业推广物料支持</li>
-									<li><div></div>成功案例分享、成功模式复制</li>
-									<li><div></div>商务谈判支持</li>
-									<li><div></div>标准化运营服务流程支持</li>
-									<li><div></div>市场宣传方案支持</li>
-								</ul>
-							</div>
-						</div>
-						
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="partner-benefit">
-			<div class="inner">
-				<div class="inner-bigger-title text-center">
-					<p>效益分析</p>
-				</div>
-				<div class="inner-small-title text-center">成功的道路并不曲折</div>
-				<div class="partner-benefit-box">
-					<div class="item">
-						<div class="left-box">
-							<div class="title">0~200人</div>
-							<div class="text">利润：约50-60元/人/月</div>
-							<div class="text">合伙人分成：<span class="col-green">60%</span></div>
-							<div class="text">华劳集团分成：<span class="col">40%</span></div>
-							<div class="text">收益：≤7800</div>
-						</div>
-						<div class="right-box">
-							<img src="__TMPL__/public/assets/style/imgs/partner/benefit/1.png" />
-						</div>
-					</div>
-					<div class="item">
-						<div class="left-box">
-							<div class="title">201~500人</div>
-							<div class="text">利润：约55-70元/人/月</div>
-							<div class="text">合伙人分成：<span class="col-green">70%</span></div>
-							<div class="text">华劳集团分成：<span class="col">30%</span></div>
-							<div class="text">收益：7700-24500</div>
-						</div>
-						<div class="right-box">
-							<img src="__TMPL__/public/assets/style/imgs/partner/benefit/2.png" />
-						</div>
-					</div>
-					<div class="item">
-						<div class="left-box">
-							<div class="title">501~1000人</div>
-							<div class="text">利润：约60-75元/人/月</div>
-							<div class="text">合伙人分成：<span class="col-green">80%</span></div>
-							<div class="text">华劳集团分成：<span class="col">20%</span></div>
-							<div class="text">收益：24048-60000</div>
-						</div>
-						<div class="right-box">
-							<img src="__TMPL__/public/assets/style/imgs/partner/benefit/3.png" />
-						</div>
-					</div>
-					<div class="item">
-						<div class="left-box">
-							<div class="title">1000人以上</div>
-							<div class="text">利润：约80-85元/人/月</div>
-							<div class="text">合伙人分成：<span class="col-green">85%</span></div>
-							<div class="text">华劳集团分成：<span class="col">15%</span></div>
-							<div class="text">收益：68068</div>
-						</div>
-						<div class="right-box">
-							<img src="__TMPL__/public/assets/style/imgs/partner/benefit/4.png" />
-						</div>
-					</div>
-				</div>
-				<div class="example">
-					<div>示例：</div>
-					<div>张先生在青岛拥有大量的企业资源以及人脉，在与华劳集团沟通后签订了合伙人合作协议（保障双方权益）。而后，张先生利用自己的人脉资源对接到某企业有工伤外包业务需求，遂与华劳集团进行沟通。我司第一时间调动优质资源与企业对接洽谈，最终与A企业签订了200人的工伤外包业务，利润为60元/人/月，200人则为12000元/人/月。按照合伙人权益4:6比例进行分成，张先生每月可得7200元，直至合作结束。次月，张先生又与B企业签订300人工伤外包业务，利润为60元/人/月，总累计人数达到500人，分成比例上调为2:8，张先生收益计算方式为：75元×80%×500人=37500元/月，直至合作结束。</div>
-				</div>
-				<div class="zhushi">注：以上内容最终解释权归华劳集团所有</div>
-			</div>
-		</div>
-		<div class="partner-process">
-			<div class="inner">
-				<div class="inner-bigger-title text-center">
-					<p>合作流程</p>
-				</div>
-				<div class="inner-small-title text-center">成功的道路并不曲折</div>
-				<div class="partner-process-box">
-					<div class="item">
-						<div class="flex">
-							<img src="__TMPL__/public/assets/style/imgs/partner/process/1.svg" />
-							<div class="name">签订协议</div>
-						</div>
-						<div class="text">为保障合伙人权益签订合伙人协议书</div>
-					</div>
-					<div class="item">
-						<div class="flex">
-							<img src="__TMPL__/public/assets/style/imgs/partner/process/2.svg" />
-							<div class="name">资源给予</div>
-						</div>
-						<div class="text">合伙人将资源给到华劳集团</div>
-					</div>
-					<div class="item">
-						<div class="flex">
-							<img src="__TMPL__/public/assets/style/imgs/partner/process/3.svg" />
-							<div class="name">合作洽谈</div>
-						</div>
-						<div class="text">华劳集团负责合作洽谈，并促进达成</div>
-					</div>
-					<div class="item">
-						<div class="flex">
-							<img src="__TMPL__/public/assets/style/imgs/partner/process/4.svg" />
-							<div class="name">项目达成</div>
-						</div>
-						<div class="text">与甲方项目达成签订合作协议</div>
-					</div>
-					<div class="item">
-						<div class="flex">
-							<img src="__TMPL__/public/assets/style/imgs/partner/process/5.svg" />
-							<div class="name">佣金支付</div>
-						</div>
-						<div class="text">按照合同人数，向合伙人支付佣金</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="partner-prospect">
-			<div class="inner">
-				<div class="inner-bigger-title text-center">
-					<p>合伙人发展前景</p>
-				</div>
-				<div class="inner-small-title text-center">成功的道路并不曲折</div>
-				<div class="partner-prospect-box">
-					<div class="partner-prospect-box-left">
-						<div class="item item1">
-							<div class="title">华劳集团区域负责人</div>
-							<div class="text">深耕市场  成就自己</div>
-						</div>
-						<div class="item item2">
-							<div class="title">分公司总经理</div>
-							<div class="text">收益稳定  年入百万</div>
-						</div>
-						<div class="item item3">
-							<div class="title">华劳合伙人</div>
-							<div class="text">第一桶金</div>
-						</div>
-					</div>
-					<div class="partner-prospect-box-right hidden-xs">
-						<img src="__TMPL__/public/assets/style/imgs/partner/prospect.png" />
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="partner">
+        <div class="index-banner index-banner-top">
+            <div class="index-banner-box hidden-xs">
+                <div class="title-top inner">
+                    <div class="line"></div>
+                    <div class="text">零投入</div>
+                    <div class="line"></div>
+                    <div class="text">全托管</div>
+                    <div class="line"></div>
+                    <div class="text">稳收益</div>
+                    <div class="line"></div>
+                    <div class="text">可持续</div>
+                    <div class="line"></div>
+                </div>
+                <div class="title-bottom inner">用人脉，年入百万</div>
+            </div>
+            <div class="index-banner-box visible-xs">
+                <div class="title">用人脉，年入百万</div>
+            </div>
+        </div>
+        <div class="partner-plan-outbox">
+            <div class="partner-plan">
+                <div class="inner">
+                    <div class="inner-bigger-title text-center">
+                        <p>合伙人计划</p>
+                    </div>
+                    <div class="inner-small-title text-center">成功的道路并不曲折</div>
+                </div>
+                <div class="partner-plan-box">
+                    <div class="inner">
+                        <div class="flex-box">
+                            <div class="partner-plan-box-left">
+                                <div class="title">零投入 | 全托管 | 稳收益 | 可持续</div>
+                                <div class="text">合伙人模式：“0成本式”城市合伙人，合伙人无需支付任何费用，收入以“高佣金”的形式。</div>
+                                <div class="text">合伙人只需要提供人脉资源，华劳集团负责项目洽谈和最终达成，最终合伙人稳拿收益。</div>
+                                <div class="bottom-box">
+                                    <div class="name">怎么可以成为合伙人？</div>
+                                    <div class="title">有人脉</div>
+                                    <div class="text">有“规模以上企业、劳动密集型企业”人脉资源，能够对接到企业人力资源部长、分管副总、高管或老板。</div>
+                                    <div class="title">有干劲</div>
+                                    <div class="text">积极主动、争取资源、有想要成就自我的想法。</div>
+                                </div>
+                            </div>
+                            <div class="partner-plan-box-right">
+                                <div class="title">团队协助，精准支持</div>
+                                <ul class="list">
+                                    <li>
+                                        <div></div>专业销售团队支持
+                                    </li>
+                                    <li>
+                                        <div></div>市场活动宣传支持
+                                    </li>
+                                    <li>
+                                        <div></div>专业推广物料支持
+                                    </li>
+                                    <li>
+                                        <div></div>成功案例分享、成功模式复制
+                                    </li>
+                                    <li>
+                                        <div></div>商务谈判支持
+                                    </li>
+                                    <li>
+                                        <div></div>标准化运营服务流程支持
+                                    </li>
+                                    <li>
+                                        <div></div>市场宣传方案支持
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="partner-benefit">
+            <div class="inner">
+                <div class="inner-bigger-title text-center">
+                    <p>效益分析</p>
+                </div>
+                <div class="inner-small-title text-center">成功的道路并不曲折</div>
+                <div class="partner-benefit-box">
+                    <div class="item">
+                        <div class="left-box">
+                            <div class="title">0~200人</div>
+                            <div class="text">利润：约50-60元/人/月</div>
+                            <div class="text">合伙人分成：<span class="col-green">60%</span></div>
+                            <div class="text">华劳集团分成：<span class="col">40%</span></div>
+                            <div class="text">收益：≤7800</div>
+                        </div>
+                        <div class="right-box">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/benefit/1.svg" />
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="left-box">
+                            <div class="title">201~500人</div>
+                            <div class="text">利润：约55-70元/人/月</div>
+                            <div class="text">合伙人分成：<span class="col-green">70%</span></div>
+                            <div class="text">华劳集团分成：<span class="col">30%</span></div>
+                            <div class="text">收益：7700-24500</div>
+                        </div>
+                        <div class="right-box">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/benefit/2.svg" />
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="left-box">
+                            <div class="title">501~1000人</div>
+                            <div class="text">利润：约60-75元/人/月</div>
+                            <div class="text">合伙人分成：<span class="col-green">80%</span></div>
+                            <div class="text">华劳集团分成：<span class="col">20%</span></div>
+                            <div class="text">收益：24048-60000</div>
+                        </div>
+                        <div class="right-box">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/benefit/3.svg" />
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="left-box">
+                            <div class="title">1000人以上</div>
+                            <div class="text">利润：约80-85元/人/月</div>
+                            <div class="text">合伙人分成：<span class="col-green">85%</span></div>
+                            <div class="text">华劳集团分成：<span class="col">15%</span></div>
+                            <div class="text">收益：68068</div>
+                        </div>
+                        <div class="right-box">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/benefit/4.svg" />
+                        </div>
+                    </div>
+                </div>
+                <div class="example">
+                    <div>示例：</div>
+                    <div>张先生在青岛拥有大量的企业资源以及人脉，在与华劳集团沟通后签订了合伙人合作协议（保障双方权益）。而后，张先生利用自己的人脉资源对接到某企业有工伤外包业务需求，遂与华劳集团进行沟通。我司第一时间调动优质资源与企业对接洽谈，最终与A企业签订了200人的工伤外包业务，利润为60元/人/月，200人则为12000元/人/月。按照合伙人权益4:6比例进行分成，张先生每月可得7200元，直至合作结束。次月，张先生又与B企业签订300人工伤外包业务，利润为60元/人/月，总累计人数达到500人，分成比例上调为2:8，张先生收益计算方式为：75元×80%×500人=37500元/月，直至合作结束。</div>
+                </div>
+                <div class="zhushi">注：以上内容最终解释权归华劳集团所有</div>
+            </div>
+        </div>
+        <div class="partner-process">
+            <div class="inner">
+                <div class="inner-bigger-title text-center">
+                    <p>合作流程</p>
+                </div>
+                <div class="inner-small-title text-center">成功的道路并不曲折</div>
+                <div class="partner-process-box">
+                    <div class="item">
+                        <div class="flex">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/process/1.svg" />
+                            <div class="name">签订协议</div>
+                        </div>
+                        <div class="text">为保障合伙人权益签订合伙人协议书</div>
+                    </div>
+                    <div class="item">
+                        <div class="flex">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/process/2.svg" />
+                            <div class="name">资源给予</div>
+                        </div>
+                        <div class="text">合伙人将资源给到华劳集团</div>
+                    </div>
+                    <div class="item">
+                        <div class="flex">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/process/3.svg" />
+                            <div class="name">合作洽谈</div>
+                        </div>
+                        <div class="text">华劳集团负责合作洽谈，并促进达成</div>
+                    </div>
+                    <div class="item">
+                        <div class="flex">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/process/4.svg" />
+                            <div class="name">项目达成</div>
+                        </div>
+                        <div class="text">与甲方项目达成签订合作协议</div>
+                    </div>
+                    <div class="item">
+                        <div class="flex">
+                            <img src="__TMPL__/public/assets/style/imgs/partner/process/5.svg" />
+                            <div class="name">佣金支付</div>
+                        </div>
+                        <div class="text">按照合同人数，向合伙人支付佣金</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="partner-prospect">
+            <div class="inner">
+                <div class="inner-bigger-title text-center">
+                    <p>合伙人发展前景</p>
+                </div>
+                <div class="inner-small-title text-center">成功的道路并不曲折</div>
+                <div class="partner-prospect-box">
+                    <div class="partner-prospect-box-left">
+                        <div class="item item1">
+                            <div class="title">华劳集团区域负责人</div>
+                            <div class="text">深耕市场 成就自己</div>
+                        </div>
+                        <div class="item item2">
+                            <div class="title">分公司总经理</div>
+                            <div class="text">收益稳定 年入百万</div>
+                        </div>
+                        <div class="item item3">
+                            <div class="title">华劳合伙人</div>
+                            <div class="text">第一桶金</div>
+                        </div>
+                    </div>
+                    <div class="partner-prospect-box-right hidden-xs">
+                        <img src="__TMPL__/public/assets/style/imgs/partner/prospect.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
 
 
-<include file="public@footer"/>
+    <include file="public@footer" />
 </body>
+
 </html>
