--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -82,11 +82,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="header-icon-imgs">
+               <!-- <div class="header-icon-imgs">
                     <img src="__TMPL__/public/assets/style/imgs/index/language.svg">
                     <span style="color: #fff;padding: 0 10px;">|</span>
                     <img src="__TMPL__/public/assets/style/imgs/index/search.svg">
-                </div>
+                </div> -->
                 <div class="num-phone">400-8718711</div>
             </div>
             <!-- <div class="row">
