--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -1,145 +1,142 @@
 <div class="footer">
-	<div class="inner hidden-xs">
-		<div class="foot-top">
-			<div class="foot-top-left">
-				<div class="item">
-					<div class="title">产品服务</div>
-					<div class="text">
-						<a href="javascript:void(0);">劳务派遣</a>
-						<a href="javascript:void(0);">劳务派遣</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">劳务派遣</a>
-						<a href="javascript:void(0);">劳务派遣</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">劳务派遣</a>
-						<a href="javascript:void(0);">劳务派遣</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">劳务派遣</a>
-						<a href="javascript:void(0);">劳务派遣</a>
-					</div>
-				</div>
-				<div class="item">
-					<div class="title">解决方案</div>
-					<div class="text">
-						<a href="javascript:void(0);">政务编外派遣服务</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">建筑工程、机电安装劳务分包</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">国企和上市物业公司保洁外包</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">员工工伤和意外伤害全面保障</a>
-					</div>
-				</div>
-				<div class="item">
-					<div class="title">走进华劳</div>
-					<div class="text">
-						<a href="javascript:void(0);">关于华劳</a>
-						<a href="javascript:void(0);">发展历程</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">新闻资讯</a>
-						<a href="javascript:void(0);">合作客户</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">联系我们</a>
-						<a href="javascript:void(0);">资质证书</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">员工查询</a>
-					</div>
-				</div>
-				<div class="item">
-					<div class="title">企业应用</div>
-					<div class="text">
-						<a href="javascript:void(0);">雇工伞服务系统</a>
-						<a href="javascript:void(0);">企业CRM</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">劳务派遣</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">刷活APP</a>
-					</div>
-					<div class="text">
-						<a href="javascript:void(0);">刷活小程序</a>
-					</div>
-				</div>
-			</div>
-			<div class="foot-top-right">
-				<img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
-			</div>
-		</div>
-		<div class="foot-center">
-			<ul>
-				<li><a href="javascript:void(0);">中政外包</a></li>
-				<li><a href="javascript:void(0);">中洁清洁</a></li>
-				<li><a href="javascript:void(0);">华劳人力</a></li>
-				<li><a href="javascript:void(0);">中劳劳务</a></li>
-				<li><a href="javascript:void(0);">中朗安服</a></li>
-				<li><a href="javascript:void(0);">金伞保险</a></li>
-				<li><a href="javascript:void(0);">雇工伞</a></li>
-				<li><a href="javascript:void(0);">和谐关系</a></li>
-				<li><a href="javascript:void(0);">德劳网</a></li>
-			</ul>
-		</div>
-		<div class="foot-bottom">
-			<div class="foot-bottom-left">
-				<img src="__TMPL__/public/assets/style/imgs/index/logo.svg" class="logo-img" />
-				<div class="text">
-					<div>华劳集团股份有限公司  ©2022  HUALAO 版权所有</div> 
-					<p>
-						<a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
-					   	<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
-					</p>
-				</div>
-			</div>
-			<div class="foot-bottom-right">
-				<div>400-8718711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
-				<div>0534-2228711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
-				<div>kf@hualaogroup.com <img src="__TMPL__/public/assets/style/imgs/index/footer-email.svg" /></div>
-				<div>山东省德州市天衢新区康博大厦1701 <img src="__TMPL__/public/assets/style/imgs/index/footer-position.svg" /></div>
-			</div>
-		</div>
-	</div>
-	<div class="inner hidden-lg hidden-md hidden-sm">
-		<div class="foot-phone-top">
-			<div class="item"><a href="javascript:void(0);">关于华劳</a></div>
-			<div class="item"><a href="javascript:void(0);">新闻资讯</a></div>
-			<div class="item"><a href="javascript:void(0);">联系我们</a></div>
-			<div class="item"><a href="javascript:void(0);">企业应用</a></div>
-		</div>
-		<div class="foot-phone-center">
-			<div class="flex-box">
-				<div class="item"><a href="javascript:void(0);">中政外包</a></div>
-				<div class="item"><a href="javascript:void(0);">中洁清洁</a></div>
-				<div class="item"><a href="javascript:void(0);">华劳人力</a></div>
-				<div class="item"><a href="javascript:void(0);">中劳劳务</a></div>
-			</div>
-			<div class="flex-box">
-				<div class="item"><a href="javascript:void(0);">中朗安服</a></div>
-				<div class="item"><a href="javascript:void(0);">金伞保险</a></div>
-				<div class="item"><a href="javascript:void(0);">雇工伞</a></div>
-				<div class="item"><a href="javascript:void(0);">和谐关系</a></div>
-			</div>
-			<div class="erweima">
-				<img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
-				<div>400-8718711</div>
-			</div>
-		</div>
-		<div class="foot-phone-bottom">
-			<div style="line-height: 1.86rem;">华劳集团股份有限公司  ©2022  HUALAO 版权所有</div>
-			<p>
-				<a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
-			   	<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
-			</p>
-		</div>
-	</div>
+    <div class="inner hidden-xs">
+        <div class="foot-top">
+            <div class="foot-top-left">
+                <div class="item">
+                    <div class="title">产品服务</div>
+                    <div class="text">
+                        <a href="javascript:void(0);">劳务派遣</a>
+                        <a href="javascript:void(0);">岗位外包</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">业务外包</a>
+                        <a href="javascript:void(0);">劳务分包</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">保洁外包</a>
+                        <a href="javascript:void(0);">安保服务</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">灵活用工</a>
+                        <a href="javascript:void(0);">工伤外包</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="title">解决方案</div>
+                    <div class="text">
+                        <a href="javascript:void(0);">企业规模用工解决方案</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">企业用工风险解决方案</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">全国人事社保解决方案</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="title">走进华劳</div>
+                    <div class="text">
+                        <a href="javascript:void(0);">关于华劳</a>
+                        <a href="javascript:void(0);">发展历程</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">新闻资讯</a>
+                        <a href="javascript:void(0);">合作客户</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">联系我们</a>
+                        <a href="javascript:void(0);">资质证书</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">员工查询</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="title">企业应用</div>
+                    <div class="text">
+                        <a href="javascript:void(0);">雇工伞服务系统</a>
+                        <a href="javascript:void(0);">企业CRM</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">劳务派遣</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">刷活APP</a>
+                    </div>
+                    <div class="text">
+                        <a href="javascript:void(0);">刷活小程序</a>
+                    </div>
+                </div>
+            </div>
+            <div class="foot-top-right">
+                <img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
+            </div>
+        </div>
+        <div class="foot-center">
+            <ul>
+                <li><a href="javascript:void(0);">中政外包</a></li>
+                <li><a href="javascript:void(0);">中洁清洁</a></li>
+                <li><a href="javascript:void(0);">华劳人力</a></li>
+                <li><a href="javascript:void(0);">中劳劳务</a></li>
+                <li><a href="javascript:void(0);">中朗安服</a></li>
+                <li><a href="javascript:void(0);">金伞保险</a></li>
+                <li><a href="javascript:void(0);">雇工伞</a></li>
+                <li><a href="javascript:void(0);">和谐关系</a></li>
+                <li><a href="javascript:void(0);">德劳网</a></li>
+            </ul>
+        </div>
+        <div class="foot-bottom">
+            <div class="foot-bottom-left">
+                <img src="__TMPL__/public/assets/style/imgs/index/logo.svg" class="logo-img" />
+                <div class="text">
+                    <div>华劳集团股份有限公司 ©2022 HUALAO 版权所有</div>
+                    <p>
+                        <a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
+                        <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
+                    </p>
+                </div>
+            </div>
+            <div class="foot-bottom-right">
+                <div>400-8718711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
+                <div>0534-2228711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
+                <div>kf@hualaogroup.com <img src="__TMPL__/public/assets/style/imgs/index/footer-email.svg" /></div>
+                <div>山东省德州市天衢新区康博大厦1701 <img src="__TMPL__/public/assets/style/imgs/index/footer-position.svg" /></div>
+            </div>
+        </div>
+    </div>
+    <div class="inner hidden-lg hidden-md hidden-sm">
+        <div class="foot-phone-top">
+            <div class="item"><a href="javascript:void(0);">关于华劳</a></div>
+            <div class="item"><a href="javascript:void(0);">新闻资讯</a></div>
+            <div class="item"><a href="javascript:void(0);">联系我们</a></div>
+            <div class="item"><a href="javascript:void(0);">企业应用</a></div>
+        </div>
+        <div class="foot-phone-center">
+            <div class="flex-box">
+                <div class="item"><a href="javascript:void(0);">中政外包</a></div>
+                <div class="item"><a href="javascript:void(0);">中洁清洁</a></div>
+                <div class="item"><a href="javascript:void(0);">华劳人力</a></div>
+                <div class="item"><a href="javascript:void(0);">中劳劳务</a></div>
+            </div>
+            <div class="flex-box">
+                <div class="item"><a href="javascript:void(0);">中朗安服</a></div>
+                <div class="item"><a href="javascript:void(0);">金伞保险</a></div>
+                <div class="item"><a href="javascript:void(0);">雇工伞</a></div>
+                <div class="item"><a href="javascript:void(0);">和谐关系</a></div>
+            </div>
+            <div class="erweima">
+                <img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
+                <div>400-8718711</div>
+            </div>
+        </div>
+        <div class="foot-phone-bottom">
+            <div style="line-height: 1.86rem;">华劳集团股份有限公司 ©2022 HUALAO 版权所有</div>
+            <p>
+                <a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
+                <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
+            </p>
+        </div>
+    </div>
 </div>
 
 <script src="__TMPL__/public/assets/style/js/bootstrap.min.js"></script>
