--- a/public/themes/simpleboot3/portal/form.html
+++ b/public/themes/simpleboot3/portal/form.html
@@ -10,9 +10,9 @@
 		<meta name="screen-orientation" content="portrait">
 		<meta name="x5-orientation" content="portrait">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-		<title>酒店客房清洁外包-中洁清洁专业的酒店客房、保洁PA、管事外包</title>
-		<meta name="keywords" content="酒店客房清洁外包、楼层客房招聘、酒店保洁PA外包、酒店管事外包、园林外包、酒店外包">
-		<meta name="description" content="中洁清洁为您提供五星级服务于酒店客房清洁外包、PA保洁外包、管事洗碗外包、餐饮（兼职part-time）外包、园林外包、大学实习培训等，与酒店一起为宾客提供最好的入住体验！打造酒店人更高薪、自由完善的职业晋升通道和交流成长平台！">
+		<title>官网-华劳集团股份有限公司</title>
+		<meta name="keywords" content="华劳集团股份有限公司,政务招聘服务,政务编外派遣服务,政务外包服务,人才招聘服务,劳务派遣服务,岗位/产线外包服务,灵活用工服务,建筑工程劳务分包,机电安装劳务分包,雇工伞,高管福利,员工关怀计划,建工宝,客房清洁HCO,公共区域保洁,PA 保洁,保洁岗位外包">
+		<meta name="description" content="华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。">
 		<meta http-equiv="Cache-Control" content="no-transform">
 		<meta http-equiv="Cache-Control" content="no-siteapp">
 		<meta http-equiv="Pragma" content="no-cache">
@@ -26,7 +26,7 @@
 		<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/common.css?v=0.01">
 		<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/index.css?v=0.01">
 		<link href="__TMPL__/public/assets/style/font/iconfont.css" rel="stylesheet">
-		<link rel="shortcut icon" href="__TMPL__/public/assets/style/img/favicon.ico">
+		<link rel="shortcut icon" href="__TMPL__/public/assets/style/imgs/favicon.ico">
 		<link href="__TMPL__/public/assets/style/css/contact.css" rel="stylesheet">
 		<link href="__TMPL__/public/assets/style/css/map.css" rel="stylesheet">
 		<link href="__TMPL__/public/assets/style/css/news.css" rel="stylesheet">
@@ -34,15 +34,18 @@
 		<style>
 			*{margin: 0;padding: 0;border: 0;}
 			body{
+				width: 100%;
 				background: url(__TMPL__/public/assets/style/img/form_bg.png) 0% 0% / cover;
 				background-size: 100% 100%;
-				min-height: calc(100vh - 2.96rem);
+				min-height: 100vh;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 			}
 			.container{
-				width: 100%;
-				max-width: 11.11rem;
-				margin: 2.96rem auto 0;
-				padding-bottom: 40px;
+				flex: 1;
+				max-width: 10.71rem;
+				padding-bottom: 0.71rem;
 				background: #fff;
 				border-radius: 2px;
 				border: 1px solid #f6f6fa;
@@ -50,9 +53,9 @@
 			}
 			.container .tableTitle {
 			    text-align: center;
-			    font-size: 0.44rem;
+			    font-size: 0.42rem;
 				font-weight: bolder;
-			    padding: 40px 0;
+			    padding: 0.71rem 0;
 			    color:#121212;
 			}
 			.container .contbox {
@@ -61,17 +64,18 @@
 			.formbox{
 				width: 94%;
 				margin: 0 auto;
-				line-height: 1rem;
+				line-height: 0.67rem;
 			}
 			.form-control{
-				height: 1rem;
+				width: calc(100% - 2.5rem);
+				height: 0.67rem;
 				color: #121212;
-				font-size: 0.26rem;
+				font-size: 0.32rem;
 			}
 			label{
-				font-size: 0.33rem;
+				font-size: 0.32rem;
 				font-weight: 500;
-				width: 1.325rem;
+				width: 2rem;
 				text-align: right;
 			}
 			.poscode{
@@ -86,25 +90,45 @@
 				width: 100%;
 			}
 			.btn-danger{
-				width: 1.85rem;
-				height: 1rem;
-				background: #00A0A0;
-				border: solid 1px #00A0A0;
+				width: 2.85rem;
+				height: 0.67rem;
+				background: #FF5000;
+				border: solid 1px #FF5000;
 			}
-			.form-control{
-				width: calc(100% - 1.6rem);
-			}
-			/* @media (max-width: 768px) {
-				.container{
-					margin: ;
+			@media (max-width: 768px) {
+				body{
+					calc(100vh - 7.46rem)
 				}
-			} */
+				.container{
+					max-width: 100%;
+				}
+				.container .tableTitle{
+					font-size: 1.2rem;
+					padding: 2.66rem 0;
+				}
+				.formbox{
+					line-height: 2.53rem;
+				}
+				.form-control{
+					width: calc(100% - 4.5rem);
+					height: 2.53rem;
+					font-size: 0.86rem;
+				}
+				label{
+					font-size: 0.86rem;
+					width: 4rem;
+				}
+				.btn-danger{
+					width: 6.66rem;
+					height: 2.53rem;
+				}
+			}
 		</style>
 	</head>
 	<body>
 			<div class="inner">
 				<div class="container">
-					<div class="tableTitle">预约中洁专属顾问 获取更多解决方案</div>
+					<div class="tableTitle">预约华劳专属顾问 获取更多解决方案</div>
 					<div class="register table_form">
 						<form class="formbox" id = 'form'>
 						  <div class="form-group flex-box">
@@ -158,7 +182,7 @@
 							  <input type="text" class="form-control" placeholder="请输入验证码">
 							</div>-->
 							<div style="text-align: center;margin-top: 30px;">
-								<button type="button" class="btn btn-danger" style="width: 100px;" id="submit-btn">提交</button>
+								<button type="button" class="btn btn-danger" id="submit-btn">提交</button>
 							</div>
 						</form>
 					</div>
